@@ -24,11 +24,9 @@ Running the generator will add a file at <tt>public/javascripts/nested_form.js</
 
 == Usage
 
-Imagine you have a <tt>Project</tt> model that <tt>has_many :tasks</tt>. To be able to use this gem, you'll need to add <tt>accepts_nested_attributes_for :tasks</tt> to your Project model.
+Imagine you have a <tt>Project</tt> model that <tt>has_many :tasks</tt>. To be able to use this gem, you'll need to add <tt>accepts_nested_attributes_for :tasks</tt> to your Project model. If you don't have the <tt>accepts_nested_attributes_for :tasks</tt> you'll get a Missing Block Error.
 
 This will create a <tt>tasks_attributes=</tt> method, so you may need to add it to the <tt>attr_accessible</tt> array. (<tt>attr_accessible :tasks_attributes</tt>)
-
-(If you don't have the <tt>accepts_nested_attributes_for :tasks</tt> you'll get a Missing Block Error)
 
 Then use the +nested_form_for+ helper method to enable the nesting.
 
