@@ -1,21 +1,23 @@
 module NestedForm
   class Builder < ::ActionView::Helpers::FormBuilder
-    # ==== Signatures
+    # Adds a link to insert a new associated records. The first argument is the name of the link, the second is the name of the association.
     #
-    #   link_to_add(content, association)
+    #   f.link_to_add("Add Task", :tasks)
     #
-    #   link_to_add(association) do
-    #     # content
-    #   end
+    # You can pass HTML options in a hash at the end and a block for the content.
     #
+    #   <%= f.link_to_add(:tasks, :class => "add_task", :href => new_task_path) do %>
+    #     Add Task
+    #   <% end %>
+    #
+    # See the README for more details on where to call this method.
     def link_to_add(*args, &block)
-      if block_given?
-        content = @template.capture(&block)
-        association = args.first
-      else
-        content = args.first
-        association = args.second
-      end
+      options = args.extract_options!.symbolize_keys
+      association = args.pop
+      options[:class] = [options[:class], "add_nested_fields"].compact.join(" ")
+      options["data-association"] = association
+      args << (options.delete(:href) || "javascript:void(0)")
+      args << options
       @fields ||= {}
       @template.after_nested_form(association) do
         model_object = object.class.reflect_on_association(association).klass.new
@@ -24,24 +26,26 @@ module NestedForm
         output.safe_concat('</div>')
         output
       end
-      @template.link_to(content, "javascript:void(0)", :class => "add_nested_fields", "data-association" => association)
+      @template.link_to(*args, &block)
     end
 
-    # ==== Signatures
+    # Adds a link to remove the associated record. The first argment is the name of the link.
     #
-    #   link_to_remove(content)
+    #   f.link_to_remove("Remove Task")
     #
-    #   link_to_remove do
-    #     # content
-    #   end
+    # You can pass HTML options in a hash at the end and a block for the content.
     #
+    #   <%= f.link_to_remove(:class => "remove_task", :href => "#") do %>
+    #     Remove Task
+    #   <% end %>
+    #
+    # See the README for more details on where to call this method.
     def link_to_remove(*args, &block)
-      if block_given?
-        content = @template.capture(&block)
-      else
-        content = args.first
-      end
-      hidden_field(:_destroy) + @template.link_to(content, "javascript:void(0)", :class => "remove_nested_fields")
+      options = args.extract_options!.symbolize_keys
+      options[:class] = [options[:class], "remove_nested_fields"].compact.join(" ")
+      args << (options.delete(:href) || "javascript:void(0)")
+      args << options
+      hidden_field(:_destroy) + @template.link_to(*args, &block)
     end
 
     def fields_for_with_nested_attributes(association_name, args, block)
