@@ -14,7 +14,7 @@ module NestedForm
       @associations ||= []
       @after_nested_form_callbacks ||= []
       unless @associations.include?(association)
-        @associations << association 
+        @associations << association
         @after_nested_form_callbacks << block
       end
     end
